--- a/test.ipynb
+++ b/test.ipynb
@@ -24,19 +24,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I4580HjHbgYu",
-        "outputId": "254a9a64-4da0-4340-b5ee-50165428ec8e"
+        "outputId": "1dc20478-c353-4694-f255-6f3e009d2245"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1tk-_OJXbwav",
-        "outputId": "558ae436-9454-4110-be0b-979637e753c3"
+        "outputId": "210cdc28-0444-4930-f3ab-fe5777da122a"
       },
       "source": [
         "!git clone https://github.com/ultralytics/yolov5 -b classifier  # clone\n",
@@ -58,13 +58,13 @@
         "from yolov5 import utils\n",
         "display = utils.notebook_init()  # checks"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "YOLOv5 🚀 v6.0-146-g9451512 torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n"
+            "YOLOv5 🚀 v6.0-158-g2ed726b torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n"
           ]
         },
         {
@@ -82,28 +82,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "v11MckLPbMDp",
-        "outputId": "1773cc97-eea3-44cd-a13a-dd83015e3786"
+        "id": "FH4L5p6-sdE9",
+        "outputId": "673927b8-b538-4345-cff8-7018dee43d54"
       },
       "source": [
-        "# test YOLOv5 with best model more without\n",
-        "!python classifier.py --data drive/MyDrive/w251_final_data_class --model yolov5s"
+        "# test YOLOv5 default yolov5s model\n",
+        "!python classifier.py --data drive/MyDrive/w251_final_data_class"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading https://ultralytics.com/assets/Arial.ttf to /root/.config/Ultralytics/Arial.ttf...\n",
-            "\u001b[34m\u001b[1mgithub: \u001b[0m⚠️ YOLOv5 is out of date by 5 commits. Use `git pull` or `git clone https://github.com/ultralytics/yolov5` to update.\n",
-            "YOLOv5 🚀 v6.0-146-g9451512 torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n",
+            "\u001b[34m\u001b[1mgithub: \u001b[0mup to date with https://github.com/ultralytics/yolov5 ✅\n",
+            "YOLOv5 🚀 v6.0-158-g2ed726b torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n",
             "\n",
+            "Using cache found in /root/.cache/torch/hub/ultralytics_yolov5_master\n",
+            "YOLOv5 🚀 v6.0-158-g2ed726b torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n",
+            "\n",
+            "Fusing layers... \n",
+            "Model Summary: 213 layers, 7225885 parameters, 0 gradients\n",
             "Testing yolov5s on drive/MyDrive/w251_final_data_class dataset with 2 classes...\n",
             "class     number    accuracy  \n",
-            "all              634   0.92271\n",
-            "no_riptide       297   0.88215\n",
-            "riptide          337   0.95846\n"
+            "all              631   0.52932\n",
+            "no_riptide       297         0\n",
+            "riptide          334         1\n"
           ]
         }
       ]
@@ -111,12 +115,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X9laRHAFsssS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wSvk2ja5sHvn",
+        "outputId": "c1814a82-d883-45e4-f35f-c287d65f6966"
+      },
+      "source": [
+        "# test YOLOv5 with best model\n",
+        "!python classifier.py --data drive/MyDrive/w251_final_data_class --model ../drive/MyDrive/best_more_without.pt"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[34m\u001b[1mgithub: \u001b[0mup to date with https://github.com/ultralytics/yolov5 ✅\n",
+            "YOLOv5 🚀 v6.0-158-g2ed726b torch 1.10.0+cu111 CUDA:0 (Tesla K80, 11441MiB)\n",
+            "\n",
+            "Testing ../drive/MyDrive/best_more_without.pt on drive/MyDrive/w251_final_data_class dataset with 2 classes...\n",
+            "class     number    accuracy  \n",
+            "all              631    0.9271\n",
+            "no_riptide       297   0.88215\n",
+            "riptide          334   0.96707\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bnYbPVrI7dok"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
